Refine engine execution and clean test harnesses